updated project hover styling

--- a/index.html
+++ b/index.html
@@ -71,21 +71,33 @@
                     <div class="projects" id="project1">
                         <div class="infoContainer">
                             <h5 class="projectTitle">first project.</h5>
-                            <p class="projectLangs">languages: lorem, ipsum, dolor</p>
                             <p class="projectDescription">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
-                            <div class="linksContainer">
-                                <a class="githubLink" href="https://github.com/jennifer-duff" target="_blank">
-                                    <img class="githubLogo" src="Assets/GitHub_icon.png" alt="click to see code on GitHub">
-                                    <span><span class="carrot">></span> view on GitHub.</span>
-                                </a>
-                                <a class="viewLive" href="#" target="_blank">
-                                    <img src="Assets/eye_icon.svg" alt="see live">
-                                    <span><span class="carrot">></span> see live.</span>
-                                </a>
-                                <a class="learnMore" href="#" target="_blank">
-                                    <img src="Assets/read_more.svg" alt="learn more">
-                                    <span><span class="carrot">></span> learn more.</span>
-                                </a>
+
+                            <div class = 'lowerTile'>
+
+                                <div class="projectLangs">
+                                    <p class = 'stackHeading'>stack</p>
+                                    <ul class = 'stackUL'>
+                                        <li>JavaScript</li>
+                                        <li>CSS</li>
+                                        <li>Ruby on Rails</li></li.>
+                                    </ul>
+                                </div>
+                            
+                                <div class="linksContainer">
+                                    <a class="githubLink" href="https://github.com/jennifer-duff" target="_blank">
+                                        <img class="githubLogo" src="Assets/GitHub_icon.png" alt="click to see code on GitHub">
+                                        <span><span class="carrot">></span> view on GitHub.</span>
+                                    </a>
+                                    <a class="viewLive" href="#" target="_blank">
+                                        <img src="Assets/eye_icon.svg" alt="see live">
+                                        <span><span class="carrot">></span> see live.</span>
+                                    </a>
+                                    <a class="learnMore" href="#" target="_blank">
+                                        <img src="Assets/read_more.svg" alt="learn more">
+                                        <span><span class="carrot">></span> learn more.</span>
+                                    </a>
+                                </div>
                             </div>
                         </div>
                     <!-- <div class="coloredBackground"></div> -->
