tweaks to project hover styling

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <h5 class="projectTitle">first project.</h5>
                             <p class="projectDescription">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
 
-                            <div class = 'lowerTile'>
+                            <!-- <div class = 'lowerTile'> -->
 
                                 <div class="projectLangs">
                                     <p class = 'stackHeading'>stack</p>
@@ -98,7 +98,7 @@
                                         <span><span class="carrot">></span> learn more.</span>
                                     </a>
                                 </div>
-                            </div>
+                            <!-- </div> -->
                         </div>
                     <!-- <div class="coloredBackground"></div> -->
                     </div>
