edited typing animation

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="JenniferDuffDesign_Desktop.css"/>
         <link rel="icon" href="Assets/jdDesign_logo.svg"/>
 
-        <title>jennifer duff design</title>
+        <title>jb development</title>
     </head>
 
 
@@ -37,19 +37,10 @@
 
 
             <section id="splashbox">
-
                 <!-- <img src="Assets/hi_im_jennifer.svg" alt="hi, i'm jennifer" id="hi_im_jennifer"> -->
                 <div id = 'introBox'>
-                    <!-- <span class = 'introWords', id = 'hi'>hi,</span>
-                    <span class = 'introWords' class = 'space'>&nbsp;<span>
-                    <span class = 'introWords', id = 'im'>i'm</span>
-                    <span class = 'introWords', id = 'jennifer'>jennifer</span> -->
-
-                    <span class = 'introWords' id = "demo"></span>
-                    <span class = 'introCursors'></span>
-<!-- 
-                    <span class = 'introWords'></span>
-                    <span class = 'introCursors'></span> -->
+                    <span class = 'introWords'>hi, i'm jennifer</span>
+                    <span class = 'introCursor'></span>
                 </div>
 
                 <div>
@@ -327,7 +318,7 @@
                 <form action="#" method="GET" id="contactForm">
                     
                     <label for="name">what's your name?</label>
-                    <input name="name" id="name" type="text" class="formField" placeholder="ex: Jennifer Duff" />
+                    <input name="name" id="name" type="text" class="formField" placeholder="ex: Jennifer Bowser" />
 
                     <label for="email">what's your email?</label>
                     <input name="email" id="email" type="email" class="formField" placeholder="someone@example.com" />
