--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <link rel="stylesheet" href="https://use.typekit.net/cok7ddm.css">
         <link rel="stylesheet" href="JenniferDuffDesign_Desktop.css"/>
-        <link rel="icon" href="Assets/jdDesign_logo.svg"/>
+        <link rel="icon" href="Assets/jb_miniLogo.svg"/>
 
         <title>jb development</title>
     </head>
@@ -17,7 +17,7 @@
 
     <body>
         <header id="navbar">
-            <a href="#home"> <img  src="Assets/jdDesign_FullLogo.svg" alt="jennifer duff design logo" id="fullLogo"/> </a>
+            <a href="#home"> <img  src="Assets/jb_extndLogo.svg" alt="jennifer bowser development logo" id="fullLogo"/> </a>
             <nav>
                 <a id="homeLink" href="#home">home<div id="homeUnderline"></div></a>
                 <a id="portfolioLink"href="#portfolio">portfolio<div id="portfolioUnderline"></div></a> 
@@ -342,7 +342,7 @@
                         <a id="aboutLink" href="#about">about<div id="AboutUnderline"></div></a>
                         <a id="contactLink" href="#contact">contact<div id="ContactUnderline"></div></a>
                     </nav>
-                    <a href="#home"> <img  src="Assets/jdDesign_FullLogo.svg" alt="jennifer duff design logo" id="fullLogo"/> </a>
+                    <a href="#home"> <img  src="Assets/jb_extndLogo.svg" alt="jennifer bowser development logo" id="fullLogo"/> </a>
                 </div>
             </div>
         </footer>
