--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Seattle-based full-stack web and software developer">
-        <meta name="keywords" content="developer, full-stack, web developer, software developer, Jennifer Duff">
+        <meta name="keywords" content="developer, full-stack, web developer, software developer, Jennifer Bowser, software engineer">
         <meta name="author" content="Jennifer Duff">
 
         <link rel="stylesheet" href="https://use.typekit.net/cok7ddm.css">
         <link rel="stylesheet" href="JenniferDuffDesign_Desktop.css"/>
-        <link rel="icon" href="Assets/jb_miniLogo.svg"/>
+        <link rel="icon" href="Assets/jb_miniLogo.png">
 
         <title>jb development</title>
     </head>
