began responsive styling work for porfolio section

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
         <meta name="author" content="Jennifer Duff">
 
         <link rel="stylesheet" href="https://use.typekit.net/cok7ddm.css">
+        <!-- <link rel = 'stylesheet' href = 'jenniferduffdesign-mobile.css'/>
+        <link rel = 'stylesheet' href = 'jenniferduffdesign-tablet.css'/>
+        <link rel = 'stylesheet' href = 'jenniferduffdesign-laptop.css'/> -->
         <link rel="stylesheet" href="JenniferDuffDesign_Desktop.css"/>
-        <link rel="icon" href="Assets/jb_miniLogo.png">
-
+        <link rel="stylesheet" href="responsiveStylesheet.css"/>
+        <link rel="icon" href="Assets/jb_miniLogo_1.png">
         <title>jb development</title>
     </head>
 
@@ -78,12 +81,7 @@
                             <p class="projectDescription">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
 
                             <div class="projectLangs">
-                                <p class = 'stackHeading'>stack</p>
-                                <ul class = 'stackUL'>
-                                    <li>JavaScript</li>
-                                    <li>CSS</li>
-                                    <li>Ruby on Rails</li></li.>
-                                </ul>
+                                <span>stack:</span>JavaScript, CSS, Ruby on Rails
                             </div>
                         
                             <div class="linksContainer">
