--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 
             <section id="portfolio">
-                <h2>my porfolio<span class="accent" >.</span></h2>
+                <h2>my portfolio<span class="accent" >.</span></h2>
                 <img src="Assets/dots.svg" id="dots">
                 <div id="portfolioContainer">
 
