some mobile styling updates

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <span class = 'introCursor'></span>
                 </div>
 
-                <div>
+                <div id = 'lineBox'>
                     <a href="#portfolio" id="checkItOut"> <span>&larr;</span> check it out </a>
                     <div id=verticalLine></div>
                 </div>
@@ -78,10 +78,11 @@
 
                         <div class="infoContainer">
                             <h5 class="projectTitle">project title.</h5>
-                            <p class="projectDescription">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+                            <p class="projectDescription">Lorem ipsum dolor sit amet, consec actetur adipisicing.</p>
 
                             <div class="projectLangs">
-                                <span>stack:</span>JavaScript, CSS, Ruby on Rails
+                                <p class = 'stackHeader'>stack</p>
+                                <p class = 'langsList'>JavaScript, CSS, Ruby on Rails</p>
                             </div>
                         
                             <div class="linksContainer">
