--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel = 'stylesheet' href = 'jenniferduffdesign-laptop.css'/> -->
         <link rel="stylesheet" href="JenniferDuffDesign_Desktop.css"/>
         <link rel="stylesheet" href="responsiveStylesheet.css"/>
-        <link rel="icon" href="Assets/jb_miniLogo_1.png">
+        <link rel="icon" href="Assets/jb_miniLogo_whiteBackground.png">
         <title>jb development</title>
     </head>
 
