Updated backToTop arrow

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <a id="aboutLink" href="#about">about<div id="AboutUnderline"></div></a>
                 <a id="contactLink" href="#contact">contact<div id="ContactUnderline"></div></a>
             </nav>
+            <img src = 'Assets/menuIcon.svg' id = 'menuIcon' alt = 'hamburger menu'>
         </header>
 
 
@@ -34,7 +35,7 @@
             <!-- "Back to Top" Button -->
             <div id="backToTopContainer" class="backToTop">
                 <a href="#home" class="backToTop" id = "backToTopLink">
-                    <div id="circle" class="backToTop"><span id = 'arrow'>^</span></div>
+                    <div id="circle" class="backToTop"><img src = 'Assets/upArrow.svg' alt = 'back to top' id = 'arrow'></div>
                 </a> 
             </div>
 
