added more mobile styling

--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni odit maxime suscipit accusantium placeat impedit quam nostrum officia dignissimos omnis nulla quae sint temporibus odio, sed, corporis libero voluptatem in. Unde nemo magni, mollitia consequatur a at autem. Accusantium molestias atque deleniti explicabo voluptatem expedita debitis commodi, quis praesentium veritatis.
                 </p>
                 <img src="Assets/Arrows.svg" alt="arrow" id="arrows">
+                <img src = 'Assets/wavyArrow.svg' alt = 'wavy arrows' id = 'wavyArrows'>
                 <h3>my stack<span class="accent">:</span></h3>
                
                 <div id="langs">
@@ -275,7 +276,7 @@
                     <div class="langGroup">
                         <div class="borderSquare"></div>
                         <div class="langsContents" id="front-end">
-                            <h4>front-end:</h4>
+                            <h4 class = 'stackSubHeading'>front-end:</h4>
                             <ul>
                                 <li><span class="carrot">></span> html</li>
                                 <li><span class="carrot">></span> css</li>
@@ -287,7 +288,7 @@
                     <div class="langGroup">
                         <div class="borderSquare"></div>
                         <div class="langsContents" id="back-end">
-                            <h4>back-end:</h4>
+                            <h4 class = 'stackSubHeading'>back-end:</h4>
                             <ul>
                                 <li><span class="carrot">></span> python</li>
                                 <li><span class="carrot">></span> java</li>
