undoing the test

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                        <span class="accent">&gt;</span> i'm a full stack developer.
                     </li>
                     <li>
-                       <span class="accent">&gt;</span> THIS IS A TEST.
+                       <span class="accent">&gt;</span> i do web & app design.
                     </li>
                     <li>
                        <span class="accent">&gt;</span> check out my work <span class="accent">&#8595;</span>
