Added snazzy nav effects when scrolling

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             </nav>
 
             <nav id = 'hamburgerNav'>
-                <a id="homeLink" href="#home">home<div id="homeUnderline"></div></a>
-                <a id="portfolioLink"href="#portfolio">portfolio<div id="portfolioUnderline"></div></a> 
-                <a id="aboutLink" href="#about">about<div id="AboutUnderline"></div></a>
-                <a id="contactLink" href="#contact">contact<div id="ContactUnderline"></div></a>
+                <a id="hamHomeLink" href="#home">home<div id="hamHomeUnderline"></div></a>
+                <a id="hamPortfolioLink"href="#portfolio">portfolio<div id="hamPortfolioUnderline"></div></a> 
+                <a id="hamAboutLink" href="#about">about<div id="hamAboutUnderline"></div></a>
+                <a id="hamContactLink" href="#contact">contact<div id="hamContactUnderline"></div></a>
             </nav>
             <img src = 'Assets/menuIcon.svg' id = 'menuIcon' alt = 'hamburger menu'>
         </header>
