more styling tweaks + smoothed h2 animation

--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
 
 
             <section id="portfolio">
-                <h2>my portfolio<span class="accent" >.</span></h2>
+                <div class = 'h2Wrapper'>
+                    <h2>my portfolio<span class="accent" >.</span></h2>
+                </div>
                 <img src="Assets/dots.svg" id="dots">
                 <div id="portfolioContainer">
 
@@ -263,7 +265,9 @@
 
 
             <section id="about">
-                <h2>about me<span class="accent">.</span></h2>
+                <div class = 'h2Wrapper'>
+                    <h2>about me<span class="accent">.</span></h2>
+                </div>
                 <p id="aboutParagraph">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni odit maxime suscipit accusantium placeat impedit quam nostrum officia dignissimos omnis nulla quae sint temporibus odio, sed, corporis libero voluptatem in. Unde nemo magni, mollitia consequatur a at autem. Accusantium molestias atque deleniti explicabo voluptatem expedita debitis commodi, quis praesentium veritatis.
                 </p>
@@ -301,8 +305,9 @@
 
 
             <section id="contact">
-                <h2>let's get in touch<span class="accent">.</span></h2>
-                
+                <div class = 'h2Wrapper'>
+                    <h2>let's get in touch<span class="accent">.</span></h2>
+                </div>
                 <form action="#" method="GET" id="contactForm">
                     
                     <label for="name">what's your name?</label>
