--- a/index.html
+++ b/index.html
@@ -301,6 +301,65 @@
                         </div>
                     </div>
                 </div>
+
+                <h3 id = 'resumeHeader'>resume<span class="accent">:</span></h3>
+                <article id = 'resume'>
+                    <h5>Education</h5>
+                    <div class = 'resumeUnderline'></div>
+                    <ul>
+                        <li>
+                            <span class = 'resumeBold'>Western Governors University &#8211; B.S., Software Development</span>
+                            <br>
+                            <span class = 'resumeSubheader'>Seattle, WA &nbsp;|&nbsp; Expected March 2022</span>
+                        <li>
+                            <span class = 'resumeBold'>Pepperdine University &#8211; B.A., Biology</span>
+                            <br>
+                            <span class = 'resumeSubheader'>Malibu, CA &nbsp;|&nbsp; May 2017</span>
+                        </li>
+                    </ul>
+
+                    <h5>Work Experience</h5>
+                    <div class = 'resumeUnderline'></div>
+                    <ul id = 'workExperienceList'>
+                        <li id = 'FM'>
+                            <span class = 'resumeBold'>FM Global &#8211; Field Engineering Assistant II</span>
+                            <br>
+                            <span class = 'resumeSubheader'>Bellevue, WA &nbsp;|&nbsp; April 2019 - September 2021</span>
+                        </li>
+                        <ul >
+                            <li class = 'subBullets'>Pursue risk improvement and organize loss-prevention site visits and for a team of nine engineers to decrease the likelihood of client property loss.</li>
+                            <li class = 'subBullets'>Maintain and report engineer key performance indicators to organizational leaders.</li>
+                            <li class = 'subBullets'>Communicate with internal and external stakeholders to arrange a servicing plan that meets client and company needs.</li>
+                        </ul>
+                        <li id = 'Pepperdine'>
+                            <span class = 'resumeBold'>Pepperdine University &#8211; Researcher</span>
+                            <br>
+                            <span class = 'resumeSubheader'>Malibu, CA &nbsp;|&nbsp; September 2015 – May 2017</span>
+                        </li>
+                        <ul>
+                            <li class = 'subBullets'>Designed and implemented original research testing pollutant effects on cells, including project scoping, data collection using MATLAB, and statistical analysis.</li>
+                            <li class = 'subBullets'>Created report showcasing changes in cellular behavior for scientific board members and presented findings at several international scientific conferences.</li>
+                        </ul>
+                    </ul>
+
+                    <h5>Certifications</h5>
+                    <div class = 'resumeUnderline'></div>
+                    <ul>
+                        <li>CompTIA A+ Certification</li>
+                        <li>Google IT Support Certificate</li>
+                        <li>Cornell University, Digital Marketing Certificate  </li>
+                    </ul>
+
+                    <h5>Skills</h5>
+                    <div class = 'resumeUnderline'></div>
+                    <ul>
+                        <li>Experience with Java, JavaScript, Python, SQL, CSS, C++, and Microsoft Excel.</li> 
+                        <li>Experienced with data and analysis and visualization.</li>
+                        <li>Experienced in research and project management in independent and collaborative settings.</li>
+                    </ul>
+
+                </article>
+
             </section>
 
 
