added yello underline to navbar

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             </nav>
             <img src = 'Assets/menuIcon.svg' id = 'menuIcon' alt = 'hamburger menu'>
         </header>
+        <div id = 'extraUnderline'></div>
 
 
         <main id="home">
