--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 <div class = 'linkBox'>
                                     <div class = 'linksLabelDiv' >
                                         <span class = 'linkText'>see live</span>
-                                        <img class = 'triangle' src = '/Assets/triangle.svg'>
+                                        <img class = 'triangle' src = 'Assets/triangle.svg'>
                                     </div>
                                     <a class="viewLive" href="https://jennifer-duff.github.io/WeatherWebApp/" target="_blank"></a>
                                 </div>
@@ -111,7 +111,7 @@
                                 <div class = 'linkBox'>
                                     <div class = 'linksLabelDiv' >
                                         <span class = 'linkText'>view on GitHub</span>
-                                        <img class = 'triangle' src = '/Assets/triangle.svg'>
+                                        <img class = 'triangle' src = 'Assets/triangle.svg'>
                                     </div>  
                                     <a class="githubLink" href="https://github.com/jennifer-duff/WeatherWebApp" target="_blank"></a>
                                 </div>
@@ -119,7 +119,7 @@
                                 <div class = 'linkBox'>
                                     <div class = 'linksLabelDiv' >
                                         <span class = 'linkText'>learn more</span>
-                                        <img class = 'triangle' src = '/Assets/triangle.svg'>
+                                        <img class = 'triangle' src = 'Assets/triangle.svg'>
                                     </div>
                                     <a class="learnMore" href="#" target="_blank"></a>
                                 </div>
@@ -434,10 +434,10 @@
                         <p class = 'contactP'>find me on the web:</p>
                         <div id = 'socialIconsDiv'>
                             <a class = 'socialLinks' href = 'https://www.linkedin.com/in/jenniferduff202/' target = '_blank'>
-                                <img src = 'Assets/linkedIn_logo.svg' class = 'socialIcons'>
+                                <img src = '/Assets/linkedIn_logo.svg' class = 'socialIcons'>
                             </a>
                             <a class = 'socialLinks' href = 'https://github.com/jennifer-duff' target = '_blank'>
-                                <img src = 'Assets/GitHub_icon.png' class = 'socialIcons'>
+                                <img src = '/Assets/GitHub_icon.png' class = 'socialIcons'>
                             </a>
                         </div>
                     </div>
