fixed icon linking problem

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                 <div class = 'linkBox'>
                                     <div class = 'linksLabelDiv' >
                                         <span class = 'linkText'>see live</span>
-                                        <img class = 'triangle' src = '/Assets/triangle.svg'>
+                                        <img class = 'triangle' src = 'Assets/triangle.svg'>
                                     </div>
                                     <a class="viewLive" href="#" target="_blank"></a>
                                 </div>
@@ -147,7 +147,7 @@
                                 <div class = 'linkBox'>
                                     <div class = 'linksLabelDiv' >
                                         <span class = 'linkText'>view on GitHub</span>
-                                        <img class = 'triangle' src = '/Assets/triangle.svg'>
+                                        <img class = 'triangle' src = 'Assets/triangle.svg'>
                                     </div>  
                                     <a class="githubLink" href="#" target="_blank"></a>
                                 </div>
@@ -155,7 +155,7 @@
                                 <div class = 'linkBox'>
                                     <div class = 'linksLabelDiv' >
                                         <span class = 'linkText'>learn more</span>
-                                        <img class = 'triangle' src = '/Assets/triangle.svg'>
+                                        <img class = 'triangle' src = 'Assets/triangle.svg'>
                                     </div>
                                     <a class="learnMore" href="#" target="_blank"></a>
                                 </div>
@@ -175,7 +175,7 @@
                                 <div class = 'linkBox'>
                                     <div class = 'linksLabelDiv' >
                                         <span class = 'linkText'>see live</span>
-                                        <img class = 'triangle' src = '/Assets/triangle.svg'>
+                                        <img class = 'triangle' src = 'Assets/triangle.svg'>
                                     </div>
                                     <a class="viewLive" href="#" target="_blank"></a>
                                 </div>
@@ -183,7 +183,7 @@
                                 <div class = 'linkBox'>
                                     <div class = 'linksLabelDiv' >
                                         <span class = 'linkText'>view on GitHub</span>
-                                        <img class = 'triangle' src = '/Assets/triangle.svg'>
+                                        <img class = 'triangle' src = 'Assets/triangle.svg'>
                                     </div>  
                                     <a class="githubLink" href="#" target="_blank"></a>
                                 </div>
@@ -191,7 +191,7 @@
                                 <div class = 'linkBox'>
                                     <div class = 'linksLabelDiv' >
                                         <span class = 'linkText'>learn more</span>
-                                        <img class = 'triangle' src = '/Assets/triangle.svg'>
+                                        <img class = 'triangle' src = 'Assets/triangle.svg'>
                                     </div>
                                     <a class="learnMore" href="#" target="_blank"></a>
                                 </div>
@@ -211,7 +211,7 @@
                                 <div class = 'linkBox'>
                                     <div class = 'linksLabelDiv' >
                                         <span class = 'linkText'>see live</span>
-                                        <img class = 'triangle' src = '/Assets/triangle.svg'>
+                                        <img class = 'triangle' src = 'Assets/triangle.svg'>
                                     </div>
                                     <a class="viewLive" href="#" target="_blank"></a>
                                 </div>
@@ -219,7 +219,7 @@
                                 <div class = 'linkBox'>
                                     <div class = 'linksLabelDiv' >
                                         <span class = 'linkText'>view on GitHub</span>
-                                        <img class = 'triangle' src = '/Assets/triangle.svg'>
+                                        <img class = 'triangle' src = 'Assets/triangle.svg'>
                                     </div>  
                                     <a class="githubLink" href="#" target="_blank"></a>
                                 </div>
@@ -227,7 +227,7 @@
                                 <div class = 'linkBox'>
                                     <div class = 'linksLabelDiv' >
                                         <span class = 'linkText'>learn more</span>
-                                        <img class = 'triangle' src = '/Assets/triangle.svg'>
+                                        <img class = 'triangle' src = 'Assets/triangle.svg'>
                                     </div>
                                     <a class="learnMore" href="#" target="_blank"></a>
                                 </div>
@@ -247,7 +247,7 @@
                                 <div class = 'linkBox'>
                                     <div class = 'linksLabelDiv' >
                                         <span class = 'linkText'>see live</span>
-                                        <img class = 'triangle' src = '/Assets/triangle.svg'>
+                                        <img class = 'triangle' src = 'Assets/triangle.svg'>
                                     </div>
                                     <a class="viewLive" href="#" target="_blank"></a>
                                 </div>
@@ -255,7 +255,7 @@
                                 <div class = 'linkBox'>
                                     <div class = 'linksLabelDiv' >
                                         <span class = 'linkText'>view on GitHub</span>
-                                        <img class = 'triangle' src = '/Assets/triangle.svg'>
+                                        <img class = 'triangle' src = 'Assets/triangle.svg'>
                                     </div>  
                                     <a class="githubLink" href="#" target="_blank"></a>
                                 </div>
@@ -263,7 +263,7 @@
                                 <div class = 'linkBox'>
                                     <div class = 'linksLabelDiv' >
                                         <span class = 'linkText'>learn more</span>
-                                        <img class = 'triangle' src = '/Assets/triangle.svg'>
+                                        <img class = 'triangle' src = 'Assets/triangle.svg'>
                                     </div>
                                     <a class="learnMore" href="#" target="_blank"></a>
                                 </div>
@@ -284,7 +284,7 @@
                                 <div class = 'linkBox'>
                                     <div class = 'linksLabelDiv' >
                                         <span class = 'linkText'>see live</span>
-                                        <img class = 'triangle' src = '/Assets/triangle.svg'>
+                                        <img class = 'triangle' src = 'Assets/triangle.svg'>
                                     </div>
                                     <a class="viewLive" href="#" target="_blank"></a>
                                 </div>
@@ -292,7 +292,7 @@
                                 <div class = 'linkBox'>
                                     <div class = 'linksLabelDiv' >
                                         <span class = 'linkText'>view on GitHub</span>
-                                        <img class = 'triangle' src = '/Assets/triangle.svg'>
+                                        <img class = 'triangle' src = 'Assets/triangle.svg'>
                                     </div>  
                                     <a class="githubLink" href="#" target="_blank"></a>
                                 </div>
@@ -300,7 +300,7 @@
                                 <div class = 'linkBox'>
                                     <div class = 'linksLabelDiv' >
                                         <span class = 'linkText'>learn more</span>
-                                        <img class = 'triangle' src = '/Assets/triangle.svg'>
+                                        <img class = 'triangle' src = 'Assets/triangle.svg'>
                                     </div>
                                     <a class="learnMore" href="#" target="_blank"></a>
                                 </div>
@@ -360,8 +360,8 @@
                     <h3 id = 'resumeHeader'>my resume<span class="accent">:</span></h3>
                 </div>
                 <div id = 'pdfBox'>
-                    <a id = 'resumeLink' href = '/Assets/JenniferDuffResume_2022.pdf' target='_blank'>view as pdf</a>
-                    <img id = 'openNewTab_icon' src = '/Assets/openNewTab_icon.svg'>
+                    <a id = 'resumeLink' href = 'Assets/JenniferDuffResume_2022.pdf' target='_blank'>view as pdf</a>
+                    <img id = 'openNewTab_icon' src = 'Assets/openNewTab_icon.svg'>
                 </div>
                 <article id = 'resume'>
                     <h5>Education</h5>
@@ -434,10 +434,10 @@
                         <p class = 'contactP'>find me on the web:</p>
                         <div id = 'socialIconsDiv'>
                             <a class = 'socialLinks' href = 'https://www.linkedin.com/in/jenniferduff202/' target = '_blank'>
-                                <img src = '/Assets/linkedIn_logo.svg' class = 'socialIcons'>
+                                <img src = 'Assets/linkedIn_logo.svg' class = 'socialIcons'>
                             </a>
                             <a class = 'socialLinks' href = 'https://github.com/jennifer-duff' target = '_blank'>
-                                <img src = '/Assets/GitHub_icon.png' class = 'socialIcons'>
+                                <img src = 'Assets/GitHub_icon.png' class = 'socialIcons'>
                             </a>
                         </div>
                     </div>
