--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                                 </div>
 
                                 <div class = 'stackWrapper'>
-                                    <img class = 'stackLogos' id = 'nodeLogo' src = 'Assets/stackLogos/node.js.svg'>
+                                    <img class = 'stackLogos' id = 'nodeLogo' src = 'Assets/stackLogos/nodeJS.svg'>
                                     <p>Node.js</p>
                                 </div>
 
@@ -286,16 +286,16 @@
                                     <p>JavaScript</p>
                                 </div>
 
+                                <div class = 'stackWrapper'>
+                                    <img class = 'stackLogos' id = 'sqlLogo' src = 'Assets/stackLogos/SQL.svg'>
+                                    <p>SQL</p>
+                                </div>
                                 
                                 <div class = 'stackWrapper'>
                                     <img class = 'stackLogos' id = 'mongoDBlogo' src = 'Assets/stackLogos/mongoDB.svg'>
                                     <p>mongoDB</p>
                                 </div>
 
-                                <div class = 'stackWrapper'>
-                                    <img class = 'stackLogos' id = 'sqlLogo' src = 'Assets/stackLogos/SQL.svg'>
-                                    <p>SQL</p>
-                                </div>
 
                                 <div class = 'stackWrapper'>
                                     <img class = 'stackLogos' id = 'expressLogo' src = 'Assets/stackLogos/Express.png'>
