styling tweaks to langs section, portfolio titles

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                                     <p>Java</p>
                                 </div>
 
-                                <div class = 'stackWrapper'>
+                                <div class = 'stackWrapper shortStackLogo'>
                                     <img class = 'stackLogos' id = 'nodeLogo' src = 'Assets/stackLogos/nodeJS.svg'>
                                     <p>Node.js</p>
                                 </div>
@@ -286,18 +286,17 @@
                                     <p>JavaScript</p>
                                 </div>
 
-                                <div class = 'stackWrapper'>
-                                    <img class = 'stackLogos' id = 'sqlLogo' src = 'Assets/stackLogos/SQL.svg'>
-                                    <p>SQL</p>
-                                </div>
-                                
-                                <div class = 'stackWrapper'>
+                                <div class = 'stackWrapper shortStackLogo'>
                                     <img class = 'stackLogos' id = 'mongoDBlogo' src = 'Assets/stackLogos/mongoDB.svg'>
                                     <p>mongoDB</p>
                                 </div>
 
-
                                 <div class = 'stackWrapper'>
+                                    <img class = 'stackLogos' id = 'sqlLogo' src = 'Assets/stackLogos/SQL.svg'>
+                                    <p>SQL</p>
+                                </div>
+
+                                <div class = 'stackWrapper shortStackLogo'>
                                     <img class = 'stackLogos' id = 'expressLogo' src = 'Assets/stackLogos/Express.png'>
                                     <p>Express</p>
                                 </div>
